# sheld0n

./: .gitignore  .gitmodules  .install-with-gui  .install-without-gui  README.md  TODO.md  conan-build-notes.md  conanfile.py  install-with-gui  install-with-gui.py  install-without-gui  install-without-gui.py  install.py
app/default/: CMakeLists.txt  set.py  set_parameters.py
app/default/param/: parameters.h
app/default/param/__save/init/solutions/__group_of_points/: choice.h
app/default/param/env/: parameters.h
app/default/param/env/flow/: choice.h
app/default/param/env/flow/__analytic/: choice.h
app/default/param/env/flow/__analytic/taylor_green_vortex/: parameters.h
app/default/param/env/flow/__frozen/: choice.h  parameters.h
app/default/param/env/flow/__frozen/_flow/: choice.h
app/default/param/env/flow/__interpolated/: choice.h
app/default/param/env/flow/__interpolated/__stationary/: parameters.h
app/default/param/env/flow/__interpolated/unstationary/: parameters.h
app/default/param/env/flow/__kinematic/: choice.h
app/default/param/env/flow/__kinematic/simple/: parameters.h
app/default/param/env/flow/__reverse/: choice.h
app/default/param/env/flow/__taylor_green_vortex/: choice.h
app/default/param/env/flow/__taylor_green_vortex/simple/: parameters.h
app/default/param/env/flow/analytic/: choice.h
app/default/param/env/flow/analytic/taylor_green_vortex/: parameters.h
app/default/param/env/flow/analytic/uniform/: parameters.h
app/default/param/env/flow/jhtdb/: choice.h
app/default/param/env/flow/jhtdb/__channel_flow/: parameters.h
app/default/param/env/flow/jhtdb/forced_isotropic_turbulence/: parameters.h
app/default/param/env/objects/: parameters.h
app/default/param/env/objects/dynamic/dobject/: choice.h
app/default/param/env/objects/manager/mobject/: choice.h
app/default/param/env/objects/object/: choice.h
app/default/param/env/objects/object/__active/: choice.h
app/default/param/env/objects/object/__agent/: choice.h
app/default/param/env/objects/object/__chain/: choice.h
app/default/param/env/objects/object/__pair/: choice.h
app/default/param/env/objects/object/__passive/: choice.h
app/default/param/env/objects/object/group/: choice.h
app/default/param/env/objects/static/object/: choice.h
app/default/param/env/solutions/: parameters.h
app/default/param/env/solutions/__dynamic/source_of_points/: choice.h
app/default/param/flow/: __abc.h  __abc_py.h  __abc_py.py  __cpp_abc.h  __cpp_blob_vortices.h  __cpp_jhtdb_isotropic.h  __cpp_linear2d.h  __cpp_linear3d.h  __cpp_none.h  __cpp_point_vortices.h  __cpp_point_vortices_periodic.h  __cpp_random_sine2d.h  __cpp_tgv.h  __jhtdb_isotropic.h  __linear2d.h  __linear2d_py.h  __linear2d_py.py  __linear3d.h  __linear3d_py.h  __linear3d_py.py  __point_vortex.h  __point_vortices.h  __point_vortices_periodic.h  __py_tgv.h  __pyx_abc.pyx  __pyx_linear2d.h  __pyx_linear2d.pyx  __pyx_linear3d.h  __pyx_linear3d.pyx  __pyx_tgv.pyx  __tgv.h  __tgv_py.py  __uniform.h  choice.h  parameters.h
app/default/param/flow/analytic/: __tgv.h  __uniform.h  choice.h
app/default/param/flow/analytic/taylor_green_vortex/: parameters.h
app/default/param/flow/analytic/uniform/: parameters.h
app/default/param/init/objects/: parameters.h
app/default/param/init/objects/dobject/: parameters.h
app/default/param/init/objects/mobject/: parameters.h
app/default/param/init/objects/object/: parameters.h
app/default/param/init/solutions/: parameters.h
app/default/param/init/solutions/__reactive_front/: choice.h
app/default/param/learn/: parameters.h
app/default/param/learn/neural_network/: parameters.h
app/default/param/post/: parameters.h
app/default/param/post/mesh/: parameters.h
app/default/param/post/mesh/pos/: choice.h
app/default/param/post/objects/: parameters.h
app/default/param/post/objects/dobject/: parameters.h
app/default/param/post/objects/mobject/: parameters.h
app/default/param/post/objects/object/: parameters.h
app/default/param/run/: parameters.h
app/default/param/solutions/: parameters.h
app/default/param/solutions/__group_of_points/: choice.h  parameters.h
app/default/param/solutions/__group_of_points/custom/: choice.h  parameters.h
app/default/param/solutions/__groups/reactive_front/: choice.h
app/default/param/solutions/passive_particles/: __buoyant_particles.h  __buoyant_particles_py.h  __buoyant_particles_py.py  __cpp_blob_vortices.h  __cpp_buoyant_particles.h  __cpp_density_blobs.h  __cpp_diffuselets.h  __cpp_ifs_particles.h  __cpp_inertial_particles.h  __cpp_nn_swimmers.h  __cpp_odor_emitters.h  __cpp_odor_trackers_gradient.h  __cpp_passive_particles.h  __cpp_passive_particles_periodic.h  __cpp_passive_scalar_blobs.h  __cpp_passive_scalar_curve.h  __cpp_passive_sources_of_passive_scalar.h  __cpp_point_vortices.h  __cpp_point_vortices_dipole.h  __cpp_point_vortices_ifs_particles.h  __cpp_point_vortices_jet.h  __cpp_point_vortices_periodic.h  __cpp_rl_swimmer.h  __cpp_source_of_passive_particles.h  __cpp_spheroidal_swimmers.h  __cpp_surfers.h  __inertial_particles.h  __inertial_particles_py.h  __inertial_particles_py.py  __interactive_particles.h  __nn_swimmer.h  __nn_swimmers.h  __passive_curve.h  __passive_particles.h  __passive_particles_periodic.h  __passive_particles_py.h  __passive_particles_py.py  __passive_scalar_curve.h  __point_vortex_jet.h  __point_vortices.h  (+32 more)
app/default/param/solutions/passive_particles/__save/: __cpp_diffuselets.h  __cpp_point_vortices_jet.h
app/default/param/solutions/passive_particles/__save_py/: __py_buoyant_particles.h  __py_inertial_particles.h  __py_passive_particles.h  __py_spheroidal_swimmers.h  __py_surfers.h
app/default/post_process/: generate_trajectory_animation.py  plot_average_vertical_velocity_over_time.py  plot_over_time.py
modules/d0t/example/border_advection/: CMakeLists.txt  main.cpp
modules/d0t/example/curve_advection/: CMakeLists.txt  flow.h  main.cpp
modules/d0t/example/group_of_points_advection/: CMakeLists.txt  main.cpp
modules/sp0ce/example/test/: CMakeLists.txt  main.cpp
(+42735 files in other folders)
